// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import busAdapter_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testAdapter.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const busAdapter_imports = {  }
const busAdapter_options = {
  \\"url\\": \\"http://test.test\\"
}
const busAdapter = constructorBindFunction.bind(null,
      busAdapter_constructor,
      busAdapter_options,
      busAdapter_imports
    )
export default busAdapter
"
`;

exports[`config with process.env works correctly 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const busAdapter_constructor = ((moduleOrFile) => {
  return interopRequireDefault(__non_webpack_require__(moduleOrFile)).default
})(process.env[\\"BUS_ADAPTER\\"])
const busAdapter_imports = {  }
const busAdapter_options = {
  \\"url\\": process.env[\\"BUS_OPTIONS_URL\\"]
}
const busAdapter = constructorBindFunction.bind(null,
      busAdapter_constructor,
      busAdapter_options,
      busAdapter_imports
    )
export default busAdapter
"
`;
